create github pages

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </figure>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="header1 cid-s7BBcQVhfv" id="header16-p">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="header1 cid-s7BBcQVhfv" id="header16-p">
 
     
 
@@ -72,7 +72,7 @@
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-secondary display-4" href="https://pay.hotmart.com/S39110948A">SIM! QUERO TER ACESSO AGORA</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-secondary display-4" href="https://pay.hotmart.com/S39110948A">SIM! QUERO TER ACESSO</a></div>
             </div>
         </div>
     </div>
