--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </figure>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="header1 cid-s7BBcQVhfv" id="header16-p">
+<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="header1 cid-s7BBcQVhfv" id="header16-p">
 
     
 
@@ -461,7 +461,7 @@
                 <div class="panel-item p-3">
                     <div class="card-block">
                         <div class="testimonial-photo">
-                            <img src="assets/images/igor-240x180.jpg" alt="" title="">
+                            <img src="assets/images/igor-240x180.jpeg" alt="" title="">
                         </div>
                         <p class="mbr-text mbr-fonts-style display-7">Muito bom amigo! Conteúdo e explicação top.</p>
                     </div>
@@ -476,7 +476,7 @@
                 <div class="panel-item p-3">
                     <div class="card-block">
                         <div class="testimonial-photo">
-                            <img src="assets/images/whatsapp-image-2020-08-14-at-16.16.59-240x237.jpg" alt="" title="">
+                            <img src="assets/images/whatsapp-image-2020-08-14-at-16.16.59-240x237.jpeg" alt="" title="">
                         </div>
                         <p class="mbr-text mbr-fonts-style display-7">Cara muito massa viu... Tu tá de parabens em partilhar teu conhecimento</p>
                     </div>
