create github pages

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
     <figure class="mbr-figure">
             <div class="image-block" style="width: 100%;">
-                <img src="assets/images/pagina-capa.png" width="1400" alt="Mobirise" title="">
+                <img src="assets/images/capa-pagina-correo-1920x1080.png" width="1400" alt="Mobirise" title="">
                 
             </div>
     </figure>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="header1 cid-s7BBcQVhfv" id="header16-p">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header1 cid-s7BBcQVhfv" id="header16-p">
 
     
 
